<resources>
    <string name="app_name">tripadoo</string>
    <string name="tripado">TRIPADO</string>
    <string name="logo"/>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="romania">Romania</string>
    <string name="n_apropierea_loca_iei_curente">în apropierea locație curente</string>
    <string name="mar_23_ian_dum_24_ian">dum., 24 ian. - mie., 27 ian.</string>
    <string name="_1_camer_2_adul_i_f_r_copii">1 cameră - 2 adulți, Fără copii</string>
    <string name="c_utare">Căutare</string>
    <string name="descoper_fiecare_continent">Descoperă fiecare continent</string>
    <string name="las_te_inspirat_pentru_noua_ta_aventur">Lasă-te inspirat pentru noua ta aventură</string>
    <string name="forum">Forum</string>
    <string name="blog">Blog</string>
    <string name="avion">Avion</string>
    <string name="hotel">Hotel</string>
    <string name="sebastian_u_oiu">Sebastian Uțoiu</string>
    <string name="email">utoius7@gmail.com</string>
    <string name="genius">GeniusProgram</string>
    <string name="geniusprogram">GeniusProgram</string>
    <string name="comunicare">Comunicare</string>
    <string name="servicii_cazare_si_zbor">Servicii cazare si zbor</string>
    <string name="set_ri">Setări</string>
    <string name="descriere_genius">Alege unul din planurile GeniusProgram, și bucură-te la maxim de noile experiențe</string>
    <string name="caut_o_destina_ie_in_romania">Caută o destinație in Romania</string>
    <string name="romaniaaa">ROMANIA</string>
    <string name="bucure_ti">București</string>
    <string name="cele_mai_populare_ora_e_din_romania">Cele mai populare orașe din Romania</string>
    <string name="cluj_napoca">Cluj-Napoca</string>
    <string name="timi_oara">Timișoara</string>
    <string name="ia_i">Iași</string>
    <string name="top_destina_ii_montane">Top destinații montane</string>
</resources>