<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RomaniaActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/romaniaaa"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"/>


        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#000000"
            android:drawableStart="@drawable/ic_search"
            android:elevation="40dp"
            android:hint="@string/caut_o_destina_ie_in_romania"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/cele_mai_populare_ora_e_din_romania"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bucurestii"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/bucure_ti"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cluj"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/cluj_napoca"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/timisoara"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/timi_oara"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/iasi"/>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/ia_i"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/top_destina_ii_montane"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/sinaiaa"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/predeal"/>
                    </androidx.cardview.widget.CardView>


                </GridLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/busteni"/>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/poiana"/>
                    </androidx.cardview.widget.CardView>


                </GridLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/ranca"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/maramures"/>

                    </androidx.cardview.widget.CardView>


                </GridLayout>

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bucovina"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_column="1"
                        android:layout_margin="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bran"/>

                    </androidx.cardview.widget.CardView>


                </GridLayout>

            </LinearLayout>


        </HorizontalScrollView>
    </LinearLayout>

</ScrollView>