<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="#000000"
            android:drawableStart="@drawable/ic_search"
            android:elevation="40dp"
            android:gravity="center"
            android:hint="@string/n_apropierea_loca_iei_curente"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:drawableStart="@drawable/ic_date"
            android:gravity="center"
            android:hint="@string/mar_23_ian_dum_24_ian"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#989494"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:drawableStart="@drawable/ic_person"
            android:gravity="center"
            android:hint="@string/_1_camer_2_adul_i_f_r_copii"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="#989494"
            android:textSize="14sp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/rosu"
            android:gravity="center"
            android:text="@string/c_utare"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="370dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/descoper_fiecare_continent"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/europa"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/asia"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/africa"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/america_de_sud"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/america"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/australia"/>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/las_te_inspirat_pentru_noua_ta_aventur"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/one"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/two"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/three"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/four"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/five"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/six"/>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="270dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:background="@color/teal_700"
                    app:cardElevation="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/seven"/>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </HorizontalScrollView>

        <View
            android:layout_width="370dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/tracker"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp">

                <LinearLayout


                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bagaj"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</ScrollView>